Fix unreadable bootstrap buttons when hovering
Closes #2297

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -64,7 +64,7 @@ body {
     }
 }
 
-button {
+button:not(.btn,.btn-close) {
     /* override transition for instant hover response */
     transition: color var(--transition) ease-in-out, box-shadow var(--transition) ease-in-out !important;
     border-radius: prop(border-radius);
